# api-hotels

./: .env  .env.test  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: database.yml
migrations/: env.py  models.py
migrations/versions/: 2024_07_05_22:02-4b36b8c33d1f_create_hotel_table.py  2024_07_08_18:58-a2a1ec7729c1_make_hotel_name_unique.py
src/: env.py  main.py  server.py
src/di/: container_builder.py  containers.py
src/modules/hotel/di/: containers.py
src/modules/hotel/domain/read/: hotel.py  (+1 more)
src/modules/hotel/infrastructure/: models.py
src/shared/application/: command_handler.py  query_handler.py
src/shared/bus/di/: containers.py
src/shared/bus/infrastructure/: command_bus.py  pybuses_command_bus.py  pybuses_query_bus.py  query_bus.py
src/shared/database/di/: containers.py
src/shared/database/infrastructure/: flush_database_transaction_middleware.py  model_base.py
src/shared/domain/exception/: domain_exception.py  not_found_exception.py
src/shared/infrastructure/exception_handlers/: exception_handlers.py
src/shared/infrastructure/http_middlewares/: create_container.py  middlewares.py
test/: sample_test.py
tests/acceptance/: environment.py
tests/acceptance/features/health-check/: health_check.feature
tests/acceptance/features/hotel/: create_hotel.feature  custom_environment.py  environment.py  get_hotel.feature  get_hotels.feature  remove_hotel.feature  update_hotel.feature
tests/acceptance/steps/: __init__.py  fastapi_rest.py
tests/integration/: integration_test_case.py
(+45 files in other folders)
