[tool.poetry]
name = "api-hotels"
version = "0.0.0"
description = ""
authors = ["Nil Ballús <nballusr@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
fastapi = {version = "^0.111", extras = ["all"]}
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
dependency-injector = "^4.41.0"
pybuses = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
behave = "^1.2.6"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
